fixed navbar-toggler alignment

--- a/src/assets/sass/christophfink.com.sass
+++ b/src/assets/sass/christophfink.com.sass
@@ -41,6 +41,7 @@ $dark-bg-subtle: $gray-700
 
 button.navbar-toggler
     background-color: var(--bs-body-bg)
+    text-align: left
 
 footer
     a
